// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout goldens > careerBacon {"searchId":105} @beside 1`] = `
{
  "attrs": "79d65af75898db55",
  "colour": "6da22e94a944f11d",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @phone 1`] = `
{
  "attrs": "8990ab2fdc32086a",
  "colour": "6da22e94a944f11d",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @stacked 1`] = `
{
  "attrs": "434a24679b754692",
  "colour": "6da22e94a944f11d",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "176b0d368c71b7b9",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @beside 1`] = `
{
  "attrs": "5d5041ca83d2172e",
  "colour": "08b6aa8d320f49e1",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @phone 1`] = `
{
  "attrs": "a8b0dbbfd6dc82e8",
  "colour": "08b6aa8d320f49e1",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @stacked 1`] = `
{
  "attrs": "848f31ebd8ca4f72",
  "colour": "08b6aa8d320f49e1",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "176b0d368c71b7b9",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @beside 1`] = `
{
  "attrs": "8b1ff2f3735b1cd9",
  "colour": "f2900068293970a5",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @phone 1`] = `
{
  "attrs": "d493e32fb25d6aa6",
  "colour": "f2900068293970a5",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @stacked 1`] = `
{
  "attrs": "0467c0a0d6f37c22",
  "colour": "f2900068293970a5",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "ab001e68a072d00c",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @beside 1`] = `
{
  "attrs": "2f5d1bfaef6f012c",
  "colour": "5f5ece06abfb86fd",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @phone 1`] = `
{
  "attrs": "25729eb51b568e24",
  "colour": "5f5ece06abfb86fd",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @stacked 1`] = `
{
  "attrs": "e9316892dd3a9f75",
  "colour": "5f5ece06abfb86fd",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "ab001e68a072d00c",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @beside 1`] = `
{
  "attrs": "8b1ff2f3735b1cd9",
  "colour": "f2900068293970a5",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @phone 1`] = `
{
  "attrs": "d493e32fb25d6aa6",
  "colour": "f2900068293970a5",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @stacked 1`] = `
{
  "attrs": "0467c0a0d6f37c22",
  "colour": "f2900068293970a5",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "f9fe542be4910c6f",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @beside 1`] = `
{
  "attrs": "2f5d1bfaef6f012c",
  "colour": "5f5ece06abfb86fd",
  "decor": "34604878b8a1ac1c",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @phone 1`] = `
{
  "attrs": "25729eb51b568e24",
  "colour": "5f5ece06abfb86fd",
  "decor": "c68a5638e56c5c15",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @stacked 1`] = `
{
  "attrs": "e9316892dd3a9f75",
  "colour": "5f5ece06abfb86fd",
  "decor": "2ca4b45c3fb74e49",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "f9fe542be4910c6f",
}
`;

exports[`layout goldens > degScatter {"searchId":105} @beside 1`] = `
{
  "attrs": "cc08c8f86cd24032",
  "colour": "38402925a6610cdd",
  "decor": "107fa10bef7b5590",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @phone 1`] = `
{
  "attrs": "6e093f5938f3edf9",
  "colour": "38402925a6610cdd",
  "decor": "e13a191c126757d1",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @stacked 1`] = `
{
  "attrs": "993a235f77c00d26",
  "colour": "38402925a6610cdd",
  "decor": "e7290ca4fd106dd3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @beside 1`] = `
{
  "attrs": "a2834c1bd00a2dde",
  "colour": "9920df70f2a8f9e6",
  "decor": "107fa10bef7b5590",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @phone 1`] = `
{
  "attrs": "8d9e9007b39b01ab",
  "colour": "9920df70f2a8f9e6",
  "decor": "e13a191c126757d1",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @stacked 1`] = `
{
  "attrs": "a169135b5d8be4c1",
  "colour": "9920df70f2a8f9e6",
  "decor": "e7290ca4fd106dd3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @beside 1`] = `
{
  "attrs": "f11e321cb8bd1530",
  "colour": "dc5377495671a120",
  "decor": "67418b50cdb92eda",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @phone 1`] = `
{
  "attrs": "924a3ef99499b630",
  "colour": "dc5377495671a120",
  "decor": "e79276245b20a2a2",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @stacked 1`] = `
{
  "attrs": "a8309dd21595446d",
  "colour": "dc5377495671a120",
  "decor": "21979002f110156c",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @beside 1`] = `
{
  "attrs": "1a6a0da747cddbcd",
  "colour": "4cd48ae421a7271e",
  "decor": "1c0b331edd957b95",
  "delays": "4793d61561b39c55",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @phone 1`] = `
{
  "attrs": "539767299fa67960",
  "colour": "f10179bdac8f5767",
  "decor": "7a9da37d660bc5fb",
  "delays": "743e57736a443af0",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @stacked 1`] = `
{
  "attrs": "d15e82ff1056514c",
  "colour": "5a0cef766d18a2ec",
  "decor": "9670d39598052910",
  "delays": "cd51a73494f8ee30",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @beside 1`] = `
{
  "attrs": "6b6ef896adc8aa9a",
  "colour": "4cd48ae421a7271e",
  "decor": "1c0b331edd957b95",
  "delays": "4793d61561b39c55",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @phone 1`] = `
{
  "attrs": "1c8ca59495ff6be7",
  "colour": "f10179bdac8f5767",
  "decor": "7a9da37d660bc5fb",
  "delays": "743e57736a443af0",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @stacked 1`] = `
{
  "attrs": "ca4f00f13539ced0",
  "colour": "5a0cef766d18a2ec",
  "decor": "9670d39598052910",
  "delays": "cd51a73494f8ee30",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @beside 1`] = `
{
  "attrs": "f917fbbbccea726c",
  "colour": "ded5c4814a7b6642",
  "decor": "67418b50cdb92eda",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @phone 1`] = `
{
  "attrs": "63cf8f2862a60789",
  "colour": "4beffe8a7c5eca63",
  "decor": "e79276245b20a2a2",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @stacked 1`] = `
{
  "attrs": "17c03aab9e855fdb",
  "colour": "ded5c4814a7b6642",
  "decor": "21979002f110156c",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @beside 1`] = `
{
  "attrs": "5ed0d80e938c2965",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @phone 1`] = `
{
  "attrs": "58f7e2c3962f93e2",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @stacked 1`] = `
{
  "attrs": "8525606fa6f6c2ec",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @beside 1`] = `
{
  "attrs": "8b38740526305e94",
  "colour": "e7ddadbac5a21c84",
  "decor": "cb100f3e578cf74c",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "111fe19cf5be0c97",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @phone 1`] = `
{
  "attrs": "c3d9ecd45fdfbd90",
  "colour": "e7ddadbac5a21c84",
  "decor": "ace78b214483d2e1",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "6ebb508dd72ead30",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @stacked 1`] = `
{
  "attrs": "8a64c0b43c64d35d",
  "colour": "e7ddadbac5a21c84",
  "decor": "0796d37cb912cc4e",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "4425188788b4a335",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @beside 1`] = `
{
  "attrs": "3d503fc96334fb9b",
  "colour": "fedbefde41b568de",
  "decor": "7e4e12a0abc598eb",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @phone 1`] = `
{
  "attrs": "396becc2abb9913d",
  "colour": "fedbefde41b568de",
  "decor": "de5b76dbda656f3b",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @stacked 1`] = `
{
  "attrs": "79fae289d966b8a0",
  "colour": "fedbefde41b568de",
  "decor": "16236ae855f2a329",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > outro {"playhead":2006} @beside 1`] = `
{
  "attrs": "0af28455be969698",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "c2d6080bec017e4b",
}
`;

exports[`layout goldens > outro {"playhead":2006} @phone 1`] = `
{
  "attrs": "ffde9b4bf36fd50c",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "0a7850d088660f22",
}
`;

exports[`layout goldens > outro {"playhead":2006} @stacked 1`] = `
{
  "attrs": "fafa99f996e29bb4",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "13edfa74621f0188",
}
`;

exports[`layout goldens > outro null @beside 1`] = `
{
  "attrs": "f76a9be1d57ffb69",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "6ed572e151c948ce",
}
`;

exports[`layout goldens > outro null @phone 1`] = `
{
  "attrs": "947d7b2bef9eb634",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "a1caf5c301ba4362",
}
`;

exports[`layout goldens > outro null @stacked 1`] = `
{
  "attrs": "27812cb4f10ac1d4",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "8c48d9afa0d097d9",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @beside 1`] = `
{
  "attrs": "46ebefbf47ef1676",
  "colour": "9920df70f2a8f9e6",
  "decor": "4dcab1c41f6ede1d",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "c2d6080bec017e4b",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @phone 1`] = `
{
  "attrs": "c871f58e5aeaf1f3",
  "colour": "9920df70f2a8f9e6",
  "decor": "21a89701ca34a4d1",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "0a7850d088660f22",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @stacked 1`] = `
{
  "attrs": "7bfa2cff960a8aaf",
  "colour": "9920df70f2a8f9e6",
  "decor": "17619b632306733c",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "13edfa74621f0188",
}
`;

exports[`layout goldens > raceClose null @beside 1`] = `
{
  "attrs": "f6325ffc8d902310",
  "colour": "252e33dd20d88a6f",
  "decor": "8529e9e4741e203e",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "2e3c9b74bcc4dec7",
}
`;

exports[`layout goldens > raceClose null @phone 1`] = `
{
  "attrs": "c6ca510227ac0eaf",
  "colour": "252e33dd20d88a6f",
  "decor": "4b64512ee2ed1592",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "256f79de1cb27c58",
}
`;

exports[`layout goldens > raceClose null @stacked 1`] = `
{
  "attrs": "9247c3bca04ded04",
  "colour": "252e33dd20d88a6f",
  "decor": "1370e1ed578e4d6c",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "7e07c475244e097a",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @beside 1`] = `
{
  "attrs": "99539ea6b9da1c72",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "8c8cc65781a9bec1",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "9928e3df647058f1",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @phone 1`] = `
{
  "attrs": "2d35c75c031667e3",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "b335732ecded9857",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "73c3b3db6fdaf37d",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @stacked 1`] = `
{
  "attrs": "be29ea71b954e15f",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "19f6873be6e41006",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "873c774ff7a3a094",
}
`;

exports[`layout goldens > raceFull null @beside 1`] = `
{
  "attrs": "99539ea6b9da1c72",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "8c8cc65781a9bec1",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "9928e3df647058f1",
}
`;

exports[`layout goldens > raceFull null @phone 1`] = `
{
  "attrs": "2d35c75c031667e3",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "b335732ecded9857",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "73c3b3db6fdaf37d",
}
`;

exports[`layout goldens > raceFull null @stacked 1`] = `
{
  "attrs": "be29ea71b954e15f",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "19f6873be6e41006",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "873c774ff7a3a094",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @beside 1`] = `
{
  "attrs": "5c1e22de74111ad0",
  "colour": "7eb36584d18f6736",
  "decor": "8c8cc65781a9bec1",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "9928e3df647058f1",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @phone 1`] = `
{
  "attrs": "8ffd6d37315e7026",
  "colour": "7eb36584d18f6736",
  "decor": "b335732ecded9857",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "73c3b3db6fdaf37d",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @stacked 1`] = `
{
  "attrs": "031d677649696e2f",
  "colour": "7eb36584d18f6736",
  "decor": "19f6873be6e41006",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "873c774ff7a3a094",
}
`;

exports[`layout goldens > raceFuture null @beside 1`] = `
{
  "attrs": "5d41950c152498e9",
  "colour": "54eeb371b844eba8",
  "decor": "d8f643706cb55972",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "f64f5ef8fed7ffb8",
}
`;

exports[`layout goldens > raceFuture null @phone 1`] = `
{
  "attrs": "f29e35f17fea4739",
  "colour": "54eeb371b844eba8",
  "decor": "c14fadc10ce9669d",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "ed1091a71a182a4d",
}
`;

exports[`layout goldens > raceFuture null @stacked 1`] = `
{
  "attrs": "77b946de0ee4f194",
  "colour": "54eeb371b844eba8",
  "decor": "d28f3d66d9802fd6",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5fc98820d37d043f",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @beside 1`] = `
{
  "attrs": "cffabcd6573affed",
  "colour": "4273cc9df6240a8f",
  "decor": "11295c1e322a1603",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "ddab7027eed6d54b",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @phone 1`] = `
{
  "attrs": "82eff20059e20da0",
  "colour": "4273cc9df6240a8f",
  "decor": "0a01cbc4cb0225ea",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "69fda5e7f9d66dd5",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @stacked 1`] = `
{
  "attrs": "4f0e51f7cbc5273d",
  "colour": "4273cc9df6240a8f",
  "decor": "4cf594d5a3a4bdfd",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "49c3324e7d36cd25",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @beside 1`] = `
{
  "attrs": "8057687b19dfb4c5",
  "colour": "5638b693cee583f2",
  "decor": "11295c1e322a1603",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "f0288bcb09fb2996",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @phone 1`] = `
{
  "attrs": "a1973c4957f9396e",
  "colour": "5638b693cee583f2",
  "decor": "0a01cbc4cb0225ea",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "c52d774a6eee5090",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @stacked 1`] = `
{
  "attrs": "3d93fa5732e8d736",
  "colour": "5638b693cee583f2",
  "decor": "4cf594d5a3a4bdfd",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "9c77fcc2d638d8f8",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @beside 1`] = `
{
  "attrs": "e04a7d4c7460ba02",
  "colour": "84137e99cdd24325",
  "decor": "923c718ccbfd1da8",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5da62f29c2ca6910",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @phone 1`] = `
{
  "attrs": "df54a4005db50ace",
  "colour": "84137e99cdd24325",
  "decor": "c0e5e8a4346d6663",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "dc3478d4b84425da",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @stacked 1`] = `
{
  "attrs": "8c9565a31e5eb5a4",
  "colour": "84137e99cdd24325",
  "decor": "adb2875a278b70b4",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "2546eb871ed5e45d",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @beside 1`] = `
{
  "attrs": "99539ea6b9da1c72",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "8c8cc65781a9bec1",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "9928e3df647058f1",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @phone 1`] = `
{
  "attrs": "2d35c75c031667e3",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "b335732ecded9857",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "73c3b3db6fdaf37d",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @stacked 1`] = `
{
  "attrs": "be29ea71b954e15f",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "19f6873be6e41006",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "873c774ff7a3a094",
}
`;

exports[`layout goldens > raceRecent null @beside 1`] = `
{
  "attrs": "6116ee1fe315fcec",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "5dcb27245c6cf5cf",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "95ed7e6be7c493ec",
}
`;

exports[`layout goldens > raceRecent null @phone 1`] = `
{
  "attrs": "1edead61d8f2c1ff",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "5e02ed39cddfc513",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "3dfded968c759413",
}
`;

exports[`layout goldens > raceRecent null @stacked 1`] = `
{
  "attrs": "82cd675f78ea6793",
  "colour": "3dcefd54a3dcbb2c",
  "decor": "5501fc1ef7b8d586",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "187055d2f2b39448",
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @beside 1`] = `
{
  "attrs": "328d4827ad78f81c",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @phone 1`] = `
{
  "attrs": "328d4827ad78f81c",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @stacked 1`] = `
{
  "attrs": "328d4827ad78f81c",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @beside 1`] = `
{
  "attrs": "dff26ce2bb98b15a",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @phone 1`] = `
{
  "attrs": "81545478dc06c947",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @stacked 1`] = `
{
  "attrs": "dff26ce2bb98b15a",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @beside 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @phone 1`] = `
{
  "attrs": "47fe4f33b56db19c",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @stacked 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @beside 1`] = `
{
  "attrs": "328d4827ad78f81c",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @phone 1`] = `
{
  "attrs": "328d4827ad78f81c",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @stacked 1`] = `
{
  "attrs": "328d4827ad78f81c",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @beside 1`] = `
{
  "attrs": "dff26ce2bb98b15a",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @phone 1`] = `
{
  "attrs": "81545478dc06c947",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @stacked 1`] = `
{
  "attrs": "dff26ce2bb98b15a",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @beside 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @phone 1`] = `
{
  "attrs": "47fe4f33b56db19c",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @stacked 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "0713631851fd7917",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @beside 1`] = `
{
  "attrs": "1dd8398c568351b9",
  "colour": "38402925a6610cdd",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @phone 1`] = `
{
  "attrs": "d6bb71aed6188f8c",
  "colour": "38402925a6610cdd",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "8d5a8b9cec10e65e",
  "colour": "38402925a6610cdd",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @beside 1`] = `
{
  "attrs": "d77409ecf04b44da",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @phone 1`] = `
{
  "attrs": "42389b5e956975e7",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "3ae567f07956890d",
  "colour": "9920df70f2a8f9e6",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @beside 1`] = `
{
  "attrs": "3076b529593077ad",
  "colour": "38402925a6610cdd",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @phone 1`] = `
{
  "attrs": "72303224fd52292c",
  "colour": "38402925a6610cdd",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "3f13d931bbd87547",
  "colour": "38402925a6610cdd",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @beside 1`] = `
{
  "attrs": "2b298554590dfb16",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @phone 1`] = `
{
  "attrs": "3d9a094d3d422cb3",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "91b1618254792028",
  "colour": "9920df70f2a8f9e6",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @beside 1`] = `
{
  "attrs": "3076b529593077ad",
  "colour": "38402925a6610cdd",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @phone 1`] = `
{
  "attrs": "72303224fd52292c",
  "colour": "38402925a6610cdd",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "3f13d931bbd87547",
  "colour": "38402925a6610cdd",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @beside 1`] = `
{
  "attrs": "2b298554590dfb16",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @phone 1`] = `
{
  "attrs": "3d9a094d3d422cb3",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "91b1618254792028",
  "colour": "9920df70f2a8f9e6",
  "decor": "ab57aac1bfa74129",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @beside 1`] = `
{
  "attrs": "98bc756cf78f1880",
  "colour": "11a6901d4a4c2317",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @phone 1`] = `
{
  "attrs": "f250b6c10c9a30f7",
  "colour": "11a6901d4a4c2317",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "cf6832371b4fb16d",
  "colour": "11a6901d4a4c2317",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @beside 1`] = `
{
  "attrs": "cc40f47779bf09f0",
  "colour": "38402925a6610cdd",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @phone 1`] = `
{
  "attrs": "c66177e77fbcb43e",
  "colour": "38402925a6610cdd",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @stacked 1`] = `
{
  "attrs": "04909a9baf514945",
  "colour": "38402925a6610cdd",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @beside 1`] = `
{
  "attrs": "751e710895ab733d",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @phone 1`] = `
{
  "attrs": "8c9e24a732d274cd",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @stacked 1`] = `
{
  "attrs": "766a15e768698a24",
  "colour": "9920df70f2a8f9e6",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @beside 1`] = `
{
  "attrs": "2624db9de994211f",
  "colour": "61c561632ecd867b",
  "decor": "5ab4fef53354717f",
  "delays": null,
  "trailDelays": null,
  "trails": "c10f94f35d8c92a1",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @phone 1`] = `
{
  "attrs": "6fdb038f46938129",
  "colour": "61c561632ecd867b",
  "decor": "502ae91f4d44c83b",
  "delays": null,
  "trailDelays": null,
  "trails": "3351470274e99cad",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @stacked 1`] = `
{
  "attrs": "72fa8eb236e9377b",
  "colour": "61c561632ecd867b",
  "decor": "383d9e0ee3baf6dc",
  "delays": null,
  "trailDelays": null,
  "trails": "79418e3bfcdf8602",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @beside 1`] = `
{
  "attrs": "7a1dd09359d560ec",
  "colour": "61c561632ecd867b",
  "decor": "5ab4fef53354717f",
  "delays": null,
  "trailDelays": null,
  "trails": "162dbfec689030db",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @phone 1`] = `
{
  "attrs": "cbad9e14e7875e24",
  "colour": "61c561632ecd867b",
  "decor": "502ae91f4d44c83b",
  "delays": null,
  "trailDelays": null,
  "trails": "dae19899ff692264",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @stacked 1`] = `
{
  "attrs": "a61b5faeec70e156",
  "colour": "61c561632ecd867b",
  "decor": "383d9e0ee3baf6dc",
  "delays": null,
  "trailDelays": null,
  "trails": "ec43870ddd2607bb",
}
`;

exports[`layout goldens > titleGalaxy null @beside 1`] = `
{
  "attrs": "5ed0d80e938c2965",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @phone 1`] = `
{
  "attrs": "58f7e2c3962f93e2",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @stacked 1`] = `
{
  "attrs": "8525606fa6f6c2ec",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;
